--- a/Techmaster/project.html
+++ b/Techmaster/project.html
@@ -14,7 +14,7 @@
 <body>
 
     <nav>
-        <img style="width: 20%" src="http://tramdoc.vn/themes/test_desktop/images/logo.png" alt="guitar" />
+        <img style="width: 20%; margin-left: 20px" src="http://tramdoc.vn/themes/test_desktop/images/logo.png" alt="guitar" />
         <ul>
             <li><a href="#">Trang chủ</a></li>
             <li><a href="#">Thể loại</a></li>
